# microphone

./: .gitignore  README.md  default.nix  microphone.cabal  notes.txt  package.nix  run.sh  shell.nix  stack.yaml
benchmarks/: Bench.hs
executables/: Main.hs
sources/: Microphone.hs
sources/Microphone/: Example.hs  Extra.hs  Orphans.hs  PortAudio.hs  Save.hs  Streaming.hs  Types.hs
tests/: DocTest.hs
tests/Microphone/: Test.hs
