name:                microphone
version:             0.0.0
synopsis:            read from a microphone a.k.a. @pipes-portaudio@
description:         read raw audio data from a microphone. @portaudio@ is cross-platform (across personal computers i.e. Linux/OSX/Windows). 
homepage:            http://github.com/sboosali/microphone#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2016 Spiros Boosalis
category:            TODO
build-type:          Simple
cabal-version:       >=1.10

-- PVP
-- https://wiki.haskell.org/Package_versioning_policy
-- "A.B is known as the major version number, and C the minor version number."

extra-source-files:
  README.md
  .gitignore
  .travis.yml
  HLint.hs
  stack.yaml

-- data-files:

--  data/

source-repository head
  type:     git
  location: https://github.com/sboosali/microphone


library
 hs-source-dirs:      sources
 default-language:    Haskell2010
 ghc-options:
  -Wall
  -fwarn-incomplete-uni-patterns
  -fwarn-incomplete-record-updates
  -fwarn-identities
  -fno-warn-unticked-promoted-constructors
 default-extensions: AutoDeriveTypeable DeriveDataTypeable DeriveGeneric
                     DeriveFunctor DeriveFoldable DeriveTraversable
                     LambdaCase EmptyCase TypeOperators PostfixOperators
                     ViewPatterns BangPatterns KindSignatures
                     NamedFieldPuns RecordWildCards TupleSections
                     MultiWayIf DoAndIfThenElse EmptyDataDecls
                     MultiParamTypeClasses FlexibleContexts FlexibleInstances
                     TypeFamilies FunctionalDependencies
                     ScopedTypeVariables StandaloneDeriving

 exposed-modules:
                 Microphone
                 Microphone.Types
                 Microphone.Streaming
                 Microphone.PortAudio
                 Microphone.Save
                 Microphone.Orphans

-- other-modules:
                 Microphone.Extra
                 Microphone.Example

 build-depends:
               base >=4.7 && <5
             , stm
             , containers
             , mtl
             , transformers

             , bytestring
             , binary

             , deepseq
             , hashable
             , semigroups

             , either
             , managed
             , logging-effect
             -- , pipes
             -- , pipes-concurrency
             , errors

             , portaudio

  -- ,
  -- , transformers
  -- , mtl
  -- , containers
  -- , bytestring
  -- , stm
  -- , template-haskell

  -- ,
  -- , lens
  -- , exceptions
  -- , free
  -- , bifunctors
  -- , profunctors
  -- , either
  -- , pipes
  -- , formatting
  -- , servant
  -- , Earley
  -- , split
  -- , interpolatedstring-perl6
  -- , wl-pprint-text
  -- , text
  -- , aeson
  -- , hashable
  -- , unordered-containers
  -- , async
  -- , parallel


executable example-microphone
 hs-source-dirs:      executables
 main-is:             Main.hs

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , microphone


-- $ stack test doctest
test-suite doctest
 hs-source-dirs:      tests
 main-is:             DocTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , microphone
  , doctest


-- $ stack test unittest
test-suite unittest
 hs-source-dirs:      tests
 main-is:             UnitTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 other-modules:
  Microphone.Test

 build-depends:
    base
  , microphone
  , hspec ==2.2.*
  , QuickCheck ==2.8.*
  -- , tasty
  -- , tasty-quickcheck


-- $ stack bench
benchmark command
 hs-source-dirs:      benchmarks
 main-is:             Bench.hs
 type:                exitcode-stdio-1.0

 default-language: Haskell2010
 ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , microphone
  , criterion
  , deepseq

